--- a/static/index.html
+++ b/static/index.html
@@ -181,7 +181,29 @@
             if (!isoString) {
                 return null;
             }
-            return new Date(isoString).toLocaleString('ru-RU', { timeZone: 'Europe/Moscow' });
+
+            const addUtcSuffix = (value) => {
+                if (typeof value !== 'string') {
+                    return value;
+                }
+                // Treat backend naive datetimes as UTC if they do not carry timezone info.
+                return /[zZ]|[+-]\d{2}:?\d{2}$/.test(value) ? value : value + 'Z';
+            };
+
+            const date = new Date(addUtcSuffix(isoString));
+            if (Number.isNaN(date.getTime())) {
+                return null;
+            }
+
+            return date.toLocaleString('ru-RU', {
+                timeZone: 'Europe/Moscow',
+                day: '2-digit',
+                month: '2-digit',
+                year: 'numeric',
+                hour: '2-digit',
+                minute: '2-digit',
+                second: '2-digit'
+            });
         };
 
         async function loadDevices() {
