rename ESP32 -> Grovika

--- a/static/index.html
+++ b/static/index.html
@@ -214,7 +214,7 @@
                 const devicesDiv = document.getElementById('devices');
                 
                 if (devices.length === 0) {
-                    devicesDiv.innerHTML = '<p>Устройства не найдены. Подключите ESP32 к системе.</p>';
+                    devicesDiv.innerHTML = '<p>Устройства не найдены. Подключите устройство Grovika к системе.</p>';
                     return;
                 }
                 
