--- a/static/manual_watering.html
+++ b/static/manual_watering.html
@@ -87,19 +87,6 @@
             gap: 20px;
             margin-top: 10px;
         }
-
-        #debugPanel {
-            display: none;
-            margin-top: 24px;
-            padding: 12px;
-            border: 1px dashed #ced6e0;
-            background: #f1f2f6;
-            font-size: 13px;
-        }
-
-        #debugPanel div {
-            margin: 2px 0;
-        }
     </style>
 </head>
 <body>
@@ -130,13 +117,6 @@
     </div>
     <div id="progressText">Нет активного полива</div>
 
-    <div id="debugPanel">
-        <div style="font-weight: 600;">Отладка</div>
-        <div>Последний corr_id: <span id="debugCorrId">—</span></div>
-        <div>Последний URL ожидания ACK: <span id="debugWaitAckUrl">—</span></div>
-        <div>Последний ACK: <span id="debugAckInfo">—</span></div>
-    </div>
-
     <script>
         const deviceInput = document.getElementById("device_id");
         const durationSelect = document.getElementById("duration");
@@ -147,93 +127,12 @@
         const ackResultBlock = document.getElementById("ackResult");
         const progressBar = document.getElementById("progressBar");
         const progressText = document.getElementById("progressText");
-        const debugPanel = document.getElementById("debugPanel");
-        const debugCorrId = document.getElementById("debugCorrId");
-        const debugWaitAckUrl = document.getElementById("debugWaitAckUrl");
-        const debugAckInfo = document.getElementById("debugAckInfo");
 
         const slowPollIntervalMs = 5000;
         const fastPollIntervalMs = 2000;
 
         let slowPollTimer = null;
         let fastPollTimer = null;
-
-        const DEBUG_PREFIX = "[ACKDBG-FE]";
-        const WAIT_ACK_TIMEOUT_S = 5;
-        const debugState = {
-            enabled:
-                (typeof process !== "undefined" &&
-                    process.env &&
-                    process.env.NODE_ENV &&
-                    process.env.NODE_ENV !== "production") ||
-                false,
-            lastCorrelationId: "—",
-            lastWaitAckUrl: "—",
-            lastAck: "—"
-        };
-
-        function debugLogInfo(message, data) {
-            if (!debugState.enabled) return;
-            console.info(`${DEBUG_PREFIX} ${message}`, data);
-        }
-
-        function debugLogDebug(message, data) {
-            if (!debugState.enabled) return;
-            console.debug(`${DEBUG_PREFIX} ${message}`, data);
-        }
-
-        function debugLogWarn(message, data) {
-            if (!debugState.enabled) return;
-            console.warn(`${DEBUG_PREFIX} ${message}`, data);
-        }
-
-        function debugLogError(message, data) {
-            if (!debugState.enabled) return;
-            console.error(`${DEBUG_PREFIX} ${message}`, data);
-        }
-
-        function updateDebugPanel() {
-            if (!debugState.enabled) return;
-            debugPanel.style.display = "block";
-            debugCorrId.textContent = debugState.lastCorrelationId;
-            debugWaitAckUrl.textContent = debugState.lastWaitAckUrl;
-            debugAckInfo.textContent = debugState.lastAck;
-        }
-
-        async function ensureDebugEnabled() {
-            if (debugState.enabled) {
-                updateDebugPanel();
-                return;
-            }
-            try {
-                const response = await fetch("/_debug/manual-watering/config", { method: "GET" });
-                if (response.ok) {
-                    debugState.enabled = true;
-                    updateDebugPanel();
-                }
-            } catch (error) {
-                // если endpoint недоступен — игнорируем
-            }
-        }
-
-        function setLastCorrelationId(correlationId) {
-            if (!debugState.enabled) return;
-            debugState.lastCorrelationId = correlationId ?? "—";
-            debugState.lastAck = "—";
-            updateDebugPanel();
-        }
-
-        function setLastWaitAckUrl(url) {
-            if (!debugState.enabled) return;
-            debugState.lastWaitAckUrl = url ?? "—";
-            updateDebugPanel();
-        }
-
-        function setLastAckSummary(summary) {
-            if (!debugState.enabled) return;
-            debugState.lastAck = summary ?? "—";
-            updateDebugPanel();
-        }
 
         function setButtonsDisabled(disabled) {
             startBtn.disabled = disabled;
@@ -255,12 +154,16 @@
 
         function scheduleSlowPoll() {
             cancelSlowPoll();
-            slowPollTimer = setTimeout(() => fetchStatus().catch(console.error), slowPollIntervalMs);
+            slowPollTimer = setTimeout(() => {
+                fetchStatus().catch(() => {});
+            }, slowPollIntervalMs);
         }
 
         function startFastPoll() {
             if (!fastPollTimer) {
-                fastPollTimer = setInterval(() => fetchStatus().catch(console.error), fastPollIntervalMs);
+                fastPollTimer = setInterval(() => {
+                    fetchStatus().catch(() => {});
+                }, fastPollIntervalMs);
             }
         }
 
@@ -275,28 +178,34 @@
             if (event.target === deviceInput) {
                 cancelSlowPoll();
                 stopFastPoll();
-                fetchStatus().catch(console.error);
+                fetchStatus().catch(() => {});
             }
         });
 
         startBtn.addEventListener("click", () => {
-            if (!validateDeviceId()) return;
+            if (!validateDeviceId()) {
+                return;
+            }
             startWatering();
         });
 
         stopBtn.addEventListener("click", () => {
-            if (!validateDeviceId()) return;
+            if (!validateDeviceId()) {
+                return;
+            }
             stopWatering();
         });
 
         rebootBtn.addEventListener("click", () => {
-            if (!validateDeviceId()) return;
+            if (!validateDeviceId()) {
+                return;
+            }
             onRebootClick();
         });
 
         function validateDeviceId() {
             if (!deviceInput.value.trim()) {
-                showAck("Нужно указать ID устройства ❗");
+                showAck("Укажите ID устройства ❗");
                 return false;
             }
             return true;
@@ -319,10 +228,8 @@
                     throw new Error(`HTTP ${response.status}`);
                 }
                 const data = await response.json();
-                console.log("[Статус устройства]", data);
                 renderStatus(data);
-            } catch (error) {
-                console.error("Ошибка запроса статуса", error);
+            } catch (_error) {
                 showAck("Ошибка запроса статуса ❌");
                 setButtonsDisabled(true);
                 resetProgress();
@@ -338,7 +245,7 @@
             const lastSeenText = data.last_seen_at ? describeLastSeen(data.last_seen_at) : "—";
 
             if (isOnline) {
-                onlineStatusBlock.textContent = `Статус устройства: Онлайн ✅ (последняя активность: ${lastSeenText})`;
+                onlineStatusBlock.textContent = `Статус: онлайн ✅ (последняя активность: ${lastSeenText})`;
                 startBtn.disabled = false;
                 stopBtn.disabled = false;
                 rebootBtn.disabled = false;
@@ -355,16 +262,15 @@
             setButtonsDisabled(true);
 
             if (offlineReason === "device_offline") {
-                onlineStatusBlock.textContent = "Статус устройства: Оффлайн ❌ (устройство не отвечает)";
-                showAck("Устройство оффлайн — кнопки блокируем.");
+                onlineStatusBlock.textContent = "Статус: оффлайн ❌ (устройство не отвечает)";
+                showAck("Устройство оффлайн — кнопки заблокированы.");
             } else if (offlineReason === "no_state_yet") {
-                onlineStatusBlock.textContent = "Статус устройства: нет данных (ждём первое подключение)";
+                onlineStatusBlock.textContent = "Статус: данных пока нет (ждём первое подключение)";
                 showAck("Ждём первое подключение устройства — кнопки заблокированы.");
             } else {
-                onlineStatusBlock.textContent = "Статус устройства: оффлайн (нет свежего статуса)";
+                onlineStatusBlock.textContent = "Статус: оффлайн";
             }
 
-            setButtonsDisabled(true);
             resetProgress();
         }
 
@@ -385,12 +291,12 @@
         function describeLastSeen(lastSeenIso) {
             const seen = new Date(lastSeenIso);
             if (Number.isNaN(seen.getTime())) {
-                return "время неизвестно";
+                return "неизвестно";
             }
             const now = new Date();
             const diffSeconds = Math.max(0, Math.floor((now - seen) / 1000));
             if (diffSeconds < 1) {
-                return "менее секунды назад";
+                return "только что";
             }
             return `${diffSeconds} с назад`;
         }
@@ -404,7 +310,7 @@
             const duration = Number(durationSelect.value);
 
             setButtonsDisabled(true);
-            showAck("Отправляем команду на запуск...");
+            showAck("Отправляем команду запуска...");
 
             try {
                 const response = await fetch("/api/manual-watering/start", {
@@ -419,24 +325,15 @@
                 }
 
                 const payload = await response.json();
-                setLastCorrelationId(payload.correlation_id);
-                debugLogInfo("publish complete", {
-                    action: "manual_watering.start",
-                    device_id: deviceId,
-                    correlation_id: payload.correlation_id,
-                    timeout_s: WAIT_ACK_TIMEOUT_S,
-                    ts: Date.now()
-                });
                 showAck("Команда отправлена, ждём подтверждение...");
 
                 const ackMessage = await waitAck(payload.correlation_id, deviceId);
                 showAck(ackMessage);
 
-                fetchStatus().catch(console.error);
-                setTimeout(() => fetchStatus().catch(console.error), 1000);
+                fetchStatus().catch(() => {});
+                setTimeout(() => fetchStatus().catch(() => {}), 1000);
             } catch (error) {
-                console.error("Ошибка запуска полива", error);
-                showAck(`Не удалось запустить полив ❌ (${error.message})`);
+                showAck(`Не удалось запустить полив ❌ (${error instanceof Error ? error.message : String(error)})`);
             } finally {
                 setButtonsDisabled(false);
             }
@@ -461,23 +358,14 @@
                 }
 
                 const payload = await response.json();
-                setLastCorrelationId(payload.correlation_id);
-                debugLogInfo("publish complete", {
-                    action: "manual_watering.stop",
-                    device_id: deviceId,
-                    correlation_id: payload.correlation_id,
-                    timeout_s: WAIT_ACK_TIMEOUT_S,
-                    ts: Date.now()
-                });
                 showAck("Ждём подтверждение остановки...");
 
                 const ackMessage = await waitAck(payload.correlation_id, deviceId);
                 showAck(ackMessage);
 
-                fetchStatus().catch(console.error);
+                fetchStatus().catch(() => {});
             } catch (error) {
-                console.error("Ошибка остановки полива", error);
-                showAck(`Не удалось остановить полив ❌ (${error.message})`);
+                showAck(`Не удалось остановить полив ❌ (${error instanceof Error ? error.message : String(error)})`);
             } finally {
                 setButtonsDisabled(false);
             }
@@ -506,36 +394,20 @@
                 }
 
                 const payload = await response.json();
-                setLastCorrelationId(payload.correlation_id);
-                debugLogInfo("publish complete", {
-                    action: "manual_watering.reboot",
-                    device_id: deviceId,
-                    correlation_id: payload.correlation_id,
-                    timeout_s: WAIT_ACK_TIMEOUT_S,
-                    ts: Date.now()
-                });
                 showAck("Команда перезагрузки отправлена, ждём подтверждение...");
 
                 const ackMessage = await waitAckForReboot(payload.correlation_id, deviceId);
                 showAck(ackMessage);
 
-                fetchStatus().catch(console.error);
+                fetchStatus().catch(() => {});
             } catch (error) {
-                console.error("Ошибка перезагрузки устройства", error);
-                const rawMessage =
-                    error && typeof error === "object" && "message" in error
-                        ? error.message
-                        : String(error);
-                const message = typeof rawMessage === "string" ? rawMessage : JSON.stringify(rawMessage);
-                const errorName =
-                    error && typeof error === "object" && "name" in error ? error.name : "";
-
+                const message =
+                    error instanceof Error ? error.message : String(error);
                 if (message.includes("MQTT publisher unavailable") || message.includes("503")) {
                     showAck("Сервис недоступен, попробуйте позже ❌");
                 } else if (
                     message.includes("Failed to fetch") ||
-                    message.includes("NetworkError") ||
-                    errorName === "TypeError"
+                    message.includes("NetworkError")
                 ) {
                     showAck("Сеть недоступна ❌");
                 } else {
@@ -548,94 +420,47 @@
 
         async function waitAckForReboot(correlationId, deviceId) {
             const url = `/api/manual-watering/wait-ack?correlation_id=${encodeURIComponent(correlationId)}&timeout_s=${WAIT_ACK_TIMEOUT_S}`;
-            setLastWaitAckUrl(url);
-            debugLogDebug("WAIT_ACK request", {
-                device_id: deviceId || deviceInput.value.trim(),
-                correlation_id: correlationId,
-                url
-            });
             try {
                 const response = await fetch(url);
                 if (response.status === 408) {
-                    debugLogWarn("WAIT_ACK TIMEOUT", { correlation_id: correlationId });
-                    setLastAckSummary("408 timeout");
                     return "Перезагрузка не подтверждена: превышено время ожидания ❌";
                 }
                 if (!response.ok) {
                     const errorPayload = await response.json().catch(() => ({}));
                     const detail = errorPayload.detail || `HTTP ${response.status}`;
-                    debugLogError("WAIT_ACK ERROR", { correlation_id: correlationId, detail });
-                    setLastAckSummary(`${response.status} error`);
                     return `Перезагрузка не подтверждена: ${detail} ❌`;
                 }
                 const payload = await response.json();
-                debugLogInfo("WAIT_ACK OK", {
-                    correlation_id: correlationId,
-                    result: payload.result,
-                    status: payload.status
-                });
-                setLastAckSummary(`${payload.result}/${payload.status ?? "—"}`);
                 if (payload.result === "accepted") {
                     return "Перезагрузка подтверждена устройством ✅";
                 }
                 const reason = payload.reason || payload.result || "неизвестная причина";
-                setLastAckSummary(reason);
                 return `Перезагрузка не подтверждена: ${reason} ❌`;
-            } catch (error) {
-                console.error("Ошибка ожидания ACK для перезагрузки", error);
-                debugLogError("WAIT_ACK ERROR", {
-                    correlation_id: correlationId,
-                    message: error && error.message ? error.message : String(error)
-                });
-                setLastAckSummary("network error");
+            } catch (_error) {
                 return "Перезагрузка не подтверждена: сеть недоступна ❌";
             }
         }
 
         async function waitAck(correlationId, deviceId) {
             const url = `/api/manual-watering/wait-ack?correlation_id=${encodeURIComponent(correlationId)}&timeout_s=${WAIT_ACK_TIMEOUT_S}`;
-            setLastWaitAckUrl(url);
-            debugLogDebug("WAIT_ACK request", {
-                device_id: deviceId || deviceInput.value.trim(),
-                correlation_id: correlationId,
-                url
-            });
             try {
                 const response = await fetch(url);
                 if (response.status === 408) {
-                    debugLogWarn("WAIT_ACK TIMEOUT", { correlation_id: correlationId });
-                    setLastAckSummary("408 timeout");
                     return "ACK не получен в заданное время ❌";
                 }
                 if (!response.ok) {
                     const errorPayload = await response.json().catch(() => ({}));
-                    const detail = errorPayload.detail || `HTTP ${response.status}`;
-                    debugLogError("WAIT_ACK ERROR", { correlation_id: correlationId, detail });
-                    setLastAckSummary(`${response.status} error`);
                     return errorPayload.detail || "Ошибка ожидания ACK ❌";
                 }
                 const payload = await response.json();
-                debugLogInfo("WAIT_ACK OK", {
-                    correlation_id: correlationId,
-                    result: payload.result,
-                    status: payload.status
-                });
-                setLastAckSummary(`${payload.result}/${payload.status ?? "—"}`);
                 if (payload.result === "accepted") {
                     return "Команда подтверждена ✅";
                 }
                 if (payload.result === "rejected") {
                     return "Команда отклонена ❌";
                 }
-                setLastAckSummary(payload.result);
                 return `Ответ от устройства: ${payload.result}`;
-            } catch (error) {
-                console.error("Ошибка ожидания ACK", error);
-                debugLogError("WAIT_ACK ERROR", {
-                    correlation_id: correlationId,
-                    message: error && error.message ? error.message : String(error)
-                });
-                setLastAckSummary("network error");
+            } catch (_error) {
                 return "Не удалось дождаться ACK ❌";
             }
         }
@@ -643,8 +468,7 @@
         function init() {
             stopBtn.disabled = true;
             rebootBtn.disabled = true;
-            ensureDebugEnabled().catch(() => {});
-            fetchStatus().catch(console.error);
+            fetchStatus().catch(() => {});
         }
 
         document.addEventListener("DOMContentLoaded", init);
